--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,4 +26,7 @@
   <button type="button" class="btn btn-warning" ng-click="updateMessage()">
     Update Message
   </button>
+  <button type="button" class="btn btn-danger" ng-click="deleteMessage()">
+    Delete Message
+  </button>
 </div>
