--- a/app/views/main.html
+++ b/app/views/main.html
@@ -20,6 +20,8 @@
 
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p> -->
+  <input type="text" class="form-control" ng-model="message.text"/>
+
   <button type="button" class="btn btn-success" ng-click="setMessage()">
     Set Message
   </button>
